<resources>
    <string name="app_name">SettingsModule</string>
    <string name="settings">Settings</string>
    <string name="theme">Dark theme:</string>
    <string name="textSize">Choose notes text size:</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="authors">Authors</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="sets">Sets</string>
    <string name="main">Main</string>
    <string name="loca">Loca</string>
</resources>