<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapsActivity">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="673dp"
        tools:context=".MapsActivity" />

    <LinearLayout
        android:id="@+id/navBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="130dp"
        android:layout_marginBottom="2dp"
        android:background="?attr/bgc"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30sp"
            android:layout_weight="1"
            android:background="@drawable/rounded_corners"
            android:onClick="setsPage"
            android:text="@string/sets"
            android:textColor="?attr/buttntc" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30sp"
            android:layout_weight="1"
            android:background="@drawable/rounded_corners"
            android:onClick="mainPage"
            android:text="@string/main"
            android:textColor="?attr/buttntc" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30sp"
            android:layout_weight="1"
            android:background="@drawable/rounded_corners"
            android:text="@string/loca"
            android:textColor="?attr/buttntc" />
    </LinearLayout>
</RelativeLayout>