<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="?attr/bgc"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextTask"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Task"
        app:layout_constraintBottom_toTopOf="@+id/navBar"
        app:layout_constraintEnd_toStartOf="@+id/addbutton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/addbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:text="Add item"
        android:textColor="?attr/buttntc"
        app:layout_constraintBottom_toTopOf="@+id/navBar"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1.5dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:background="@color/grey"
        app:layout_constraintBottom_toTopOf="@+id/editTextTask"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <View
        android:id="@+id/divider2"
        android:layout_width="0dp"
        android:layout_height="1.5dp"
        android:layout_marginBottom="4sp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:background="@color/grey"
        app:layout_constraintTop_toBottomOf="@+id/editTextTask"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="1dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/addbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"

            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/navBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="?attr/bgc"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/sets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30sp"
            android:layout_marginTop="1sp"
            android:layout_weight="1"
            android:background="@drawable/rounded_corners"
            android:onClick="setsPage"
            android:text="@string/sets"
            android:textColor="?attr/buttntc" />

        <Button
            android:id="@+id/main"
            android:layout_marginTop="1sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30sp"
            android:layout_weight="1"
            android:background="@drawable/rounded_corners"
            android:text="@string/main"
            android:textColor="?attr/buttntc" />

        <Button
            android:id="@+id/nav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30sp"
            android:layout_marginTop="1sp"
            android:layout_weight="1"
            android:background="@drawable/rounded_corners"
            android:onClick="locPage"
            android:text="@string/loca"
            android:textColor="?attr/buttntc" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>